swagger products
